cmake_minimum_required(VERSION 3.15)
project(CodingProblems)
add_executable(
    SecondLargest
    SecondLargest.cpp
)

add_executable(
    ArrayReverse
    ArrayReverse.cpp
)

add_executable(
    GroupArrayReverse
    GroupArrayReverse.cpp
)

add_executable(
    RotateArray
    RotateArray.cpp
)

add_executable(
    MaxTripletProduct
    MaxTripletProduct.cpp
)

add_executable(
    MaxConsecutiveOnes
    MaxConsecutiveOnes.cpp
)

add_executable(
    MoveAllZeroesToEnd
    MoveAllZeroesToEnd.cpp
)

add_executable(
    WaveArray
    WaveArray.cpp
)
add_executable(
    NextPermutation
    NextPermutation.cpp
)
add_executable(
    MajorityElement
    MajorityElement.cpp
)